<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/_20sdp"
        android:paddingHorizontal="@dimen/_15sdp">

        <ImageView
            android:id="@+id/backArrow"
            android:layout_width="@dimen/_18sdp"
            android:layout_height="@dimen/_18sdp"
            android:src="@drawable/backarrow"/>

        <TextView
            android:id="@+id/tvDelivery"
            style="@style/tvRegular"
            android:text="@string/order_details"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/darkBlue"
            android:layout_centerHorizontal="true"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginVertical="@dimen/_5sdp"
            android:layout_below="@+id/tvDelivery"
            android:background="@color/yellow"/>

    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true"
                android:layout_marginVertical="@dimen/_15sdp"
                app:cardBackgroundColor="@color/blue_color">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_15sdp">

                    <ImageView
                        android:id="@+id/imgHeading"
                        android:layout_centerHorizontal="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/check_img" />

                    <TextView
                        android:id="@+id/tvHeading"
                        style="@style/tvRegular"
                        android:layout_marginTop="@dimen/_13sdp"
                        android:layout_below="@+id/imgHeading"
                        android:layout_centerHorizontal="true"
                        android:text="@string/cancellation_confirmed"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_14sdp" />

                    <TextView
                        android:id="@+id/qtyOne"
                        style="@style/tvRegular"
                        android:layout_below="@+id/tvHeading"
                        android:layout_centerHorizontal="true"
                        android:layout_marginVertical="@dimen/_8sdp"
                        android:background="@drawable/round_rectangle_two"
                        android:padding="@dimen/_8sdp"
                        android:text="@string/check_status"
                        android:textColor="@color/dark_grey_color"
                        android:textSize="@dimen/_10sdp" />


                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_12sdp"
                android:background="@drawable/rectangle_back">

                <TextView
                    android:id="@+id/tvRefundStatus"
                    style="@style/tvBold"
                    android:paddingHorizontal="@dimen/_12sdp"
                    android:text="@string/refund_status"
                    android:textColor="@color/dark_grey_two"
                    android:textSize="@dimen/_12sdp" />

                <View
                    android:id="@+id/view_id"
                    android:layout_width="@dimen/_120sdp"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_below="@+id/tvRefundStatus"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@color/dark_grey_three" />


                <TextView
                    style="@style/tvRegular"
                    android:layout_below="@+id/view_id"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:text="@string/refund_description"
                    android:textColor="@color/dark_grey_two"
                    android:textSize="@dimen/_10sdp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_12sdp"
                android:background="@drawable/rectangle_back">

                <TextView
                    android:id="@+id/tvHead"
                    style="@style/tvBold"
                    android:paddingHorizontal="@dimen/_12sdp"
                    android:text="@string/keep_shopping"
                    android:textColor="@color/dark_grey_two"
                    android:textSize="@dimen/_12sdp" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_12sdp"
                android:background="@drawable/rectangle_back">

                <TextView
                    style="@style/tvBold"
                    android:paddingHorizontal="@dimen/_12sdp"
                    android:text="@string/view_all_orders"
                    android:textColor="@color/dark_grey_two"
                    android:textSize="@dimen/_12sdp" />

            </RelativeLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>