<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/_20sdp"
        android:paddingHorizontal="@dimen/_15sdp">

        <ImageView
            android:id="@+id/backArrow"
            android:layout_width="@dimen/_18sdp"
            android:layout_height="@dimen/_18sdp"
            android:src="@drawable/backarrow"/>

        <TextView
            android:id="@+id/tvDelivery"
            style="@style/tvRegular"
            android:text="@string/order_details"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/darkBlue"
            android:layout_centerHorizontal="true"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginVertical="@dimen/_5sdp"
            android:layout_below="@+id/tvDelivery"
            android:background="@color/yellow"/>

    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:orientation="vertical">

            <TextView
                style="@style/tvBold"
                android:textSize="@dimen/_11sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:text="OD15154623524848"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true"
                android:layout_marginVertical="@dimen/_15sdp"
                app:cardBackgroundColor="@color/light_purple">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_15sdp">

                    <ImageView
                        android:id="@+id/imgHeading"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_15sdp"
                        android:src="@drawable/order_img" />

                    <TextView
                        android:id="@+id/tvHeading"
                        style="@style/tvRegular"
                        android:layout_marginTop="@dimen/_13sdp"
                        android:layout_toEndOf="@+id/imgHeading"
                        android:text="Guns Germs and Steel"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/_14sdp" />

                    <TextView
                        android:id="@+id/qtyOne"
                        style="@style/tvRegular"
                        android:layout_below="@+id/tvHeading"
                        android:layout_toEndOf="@+id/imgHeading"
                        android:textSize="@dimen/_12sdp"
                        android:layout_marginVertical="@dimen/_5sdp"
                        android:textColor="@color/colorAccent"
                        android:text="Quantity - 1"/>

                    <TextView
                        style="@style/tvRegular"
                        android:layout_below="@+id/qtyOne"
                        android:layout_toEndOf="@+id/imgHeading"
                        android:textSize="@dimen/_12sdp"
                        android:drawablePadding="@dimen/_5sdp"
                        android:drawableStart="@drawable/indian_rupees"
                        android:textColor="@color/colorAccent"
                        android:text="460"/>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical"
               android:layout_marginHorizontal="@dimen/_5sdp">

               <TextView
                   style="@style/tvRegular"
                   android:textSize="@dimen/_11sdp"
                   android:text="@string/reason_for_cancellation"/>

               <EditText
                   android:id="@+id/etEmail"
                   style="@style/customEditText"
                   android:textSize="@dimen/_10sdp"
                   android:backgroundTint="@color/greyBackThree"
                   android:textColor="@color/greyBackThree"
                   android:text=""/>
           </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/_18sdp"
                android:layout_marginHorizontal="@dimen/_5sdp">

                <TextView
                    style="@style/tvRegular"
                    android:textSize="@dimen/_11sdp"
                    android:text="@string/comments_optional"/>

                <EditText
                    style="@style/customEditText"
                    android:textSize="@dimen/_10sdp"
                    android:backgroundTint="@color/greyBackThree"
                    android:textColor="@color/greyBackThree"
                    android:text=""/>

                <EditText
                    style="@style/customEditText"
                    android:textSize="@dimen/_10sdp"
                    android:backgroundTint="@color/greyBackThree"
                    android:textColor="@color/greyBackThree"
                    android:text=""/>

                <EditText
                    style="@style/customEditText"
                    android:textSize="@dimen/_10sdp"
                    android:backgroundTint="@color/greyBackThree"
                    android:textColor="@color/greyBackThree"
                    android:text=""/>


                <TextView
                    style="@style/tvRegular"
                    android:layout_marginTop="@dimen/_18sdp"
                    android:text="@string/description"/>


            </LinearLayout>

            <TextView
                android:id="@+id/butSubmit"
                android:layout_width="match_parent"
                style="@style/customButton"
                android:text="Submit Request"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_marginVertical="@dimen/_20sdp"
                android:background="@drawable/round_rectangle"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>